# CarRecommendationSystem

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
Backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  schemas.py
Backend/Routes/: recommend.py
Backend/artifacts/: scaler.pkl
Frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  stitch_design.html  vercel.json  vite.config.js
Frontend/src/: App.jsx  index.css
model_training/: car_recommendation.ipynb
model_training/artifacts/: df_cleaned.pkl  ohe.pkl
model_training/data/: cars.csv
